Archive2/8f/5623d7c7c42189/output
main.cpp: In function 'int main()':
main.cpp:8:7: error: cannot convert 'bool' to 'boolean' in assignment
     b = ( i == j );
       ^
