Archive2/8f/5623d7c7c42189/main.cpp
enum boolean { FALSE, TRUE };
    
int main()
{
    boolean b;
    int i = 0;
    int j = 1;
    b = ( i == j );
}
